# potato-cactus

./: .gitignore  .style.yapf  CHANGELOG.md  DEBUGGING.md  README.md  potato-cactus.cabal  pyrightconfig.json  requirements.txt
app/: Main.hs
app/PotatoCactus/: Dummy.hs
app/PotatoCactus/Boot/: GameChannel.hs  GameThreadMain.hs  Initialization.hs  ServerInit.hs  WorldInit.hs
app/PotatoCactus/Client/: ClientUpdate.hs  LocalEntityList.hs  LocalPlayerList.hs  PlayerInit.hs  PlayerUpdate.hs
app/PotatoCactus/Client/GameObjectUpdate/: EncodeGameObjectUpdate.hs  GameObjectUpdateDiff.hs  GameObjectUpdateOperations.hs
app/PotatoCactus/Client/GroundItemsUpdate/: EncodeGroundItemsUpdate.hs  GroundItemsUpdateDiff.hs
app/PotatoCactus/Client/Interface/: EncodeInterfaceUpdate.hs
app/PotatoCactus/Config/: Constants.hs
app/PotatoCactus/Game/: Item.hs  ItemContainer.hs  Player.hs  Position.hs  Reducer.hs  Skills.hs  Typing.hs  World.hs
app/PotatoCactus/Game/Combat/: AdvanceCombatEntity.hs  AdvanceCombatEntityDeps.hs  CombatEntity.hs  Hit.hs  LocateCombatTarget.hs
app/PotatoCactus/Game/Definitions/: EquipmentDefinitions.hs  GameObjectDefinitions.hs  ItemDefinitions.hs  NpcDefinitions.hs  StaticGameObjectSet.hs
app/PotatoCactus/Game/Definitions/Parser/: GameObjectPlacementParser.hs  ItemDefinitionParser.hs  ObjectDefinitionParser.hs
app/PotatoCactus/Game/Definitions/Types/: GameObjectDefinition.hs  ItemDefinition.hs
app/PotatoCactus/Game/Entity/: EntityData.hs
app/PotatoCactus/Game/Entity/Animation/: Animation.hs
app/PotatoCactus/Game/Entity/GroundItem/: GroundItem.hs  GroundItemCollection.hs
app/PotatoCactus/Game/Entity/Interaction/: AdvanceInteractionDeps.hs  CanInteractWithEntity.hs  ClosestInteractableTileCalc.hs  Interaction.hs  State.hs  Target.hs
app/PotatoCactus/Game/Entity/Npc/: Npc.hs  (+4 more)
app/PotatoCactus/Game/Interface/: FriendsList.hs  GameTabs.hs  InterfaceButtonDispatch.hs  InterfaceController.hs  PlayerInteraction.hs  PlayerSettings.hs
app/PotatoCactus/Game/Message/: EquipItemMessagePayload.hs  GameChannelMessage.hs  ItemOnObjectPayload.hs  ObjectClickPayload.hs  RegisterClientPayload.hs
app/PotatoCactus/Game/Movement/: Direction.hs  InterpolatePath.hs  MovementEntity.hs  PathPlanner.hs  PlayerMovement.hs  PlayerWalkMovement.hs  PositionXY.hs  StaticMovement.hs  WalkingStep.hs
app/PotatoCactus/Game/PlayerUpdate/: AdvancePlayer.hs  Appearance.hs  ChatMessage.hs  Equipment.hs  PlayerAnimationDefinitions.hs  PlayerUpdate.hs  ProcessPlayerUpdate.hs  UpdateMask.hs  VarpSet.hs
app/PotatoCactus/Game/Scripting/: BuiltinGameEventProcessor.hs  MockScriptInteractions.hs  ProcessTickUpdates.hs  ScriptUpdates.hs
app/PotatoCactus/Game/World/: CallbackScheduler.hs  EntityPositionFinder.hs  MobList.hs  Selectors.hs
app/PotatoCactus/Interop/: ScriptEngineProcess.hs
app/PotatoCactus/Login/: LoginHandler.hs  Models.hs
app/PotatoCactus/Network/: Binary.hs  ClientHandle.hs  ClientHandler.hs  InboundPacketMapper.hs  PlayerHandler.hs  SocketHandler.hs
app/PotatoCactus/Network/Encoding/: ChatMessageEncoding.hs
app/PotatoCactus/Network/Packets/: Decoder.hs  Opcodes.hs  Packet.hs  PacketLengths.hs  Reader.hs
app/PotatoCactus/Persistence/: PlayerRepository.hs
app/PotatoCactus/Utils/: Flow.hs  Iterable.hs  Logging.hs
docs/: Scripting API.md
game-data/: README.md
game-data/definitions/: README.md
game-data/maps/: README.md
notes/: 317-definitions.md  compute_map_stats.py  first-game-update.txt  luna-client-packet-information.txt  luna-config-packets.txt  luna-packet-log.txt  varbits.md
script-engine/: .gitignore  main.py
script-engine/potato_cactus/: __init__.py
script-engine/potato_cactus/api/: actions.py  context.py  events.py  exception.py  world.py
script-engine/potato_cactus/api/dto/: combat.py  interaction.py  interface.py  inventory.py  movement.py  npc.py  object.py  player.py  position.py  script_invocation.py  world.py
script-engine/potato_cactus/helper/: dialogue.py  varp.py
script-engine/potato_cactus/internal/: initialize_context.py  load_world.py
script-engine/potato_cactus/internal/impl/: context_impl.py  static_object_set.py
script-engine/potato_cactus/internal/messages/: decode.py  dispatch.py  dispatcher.py  inbound.py  outbound.py
script-engine/potato_cactus/internal/registry/: __init__.py
script-engine/potato_cactus/internal/util/: script_invoker.py  stderr_logger.py  wrapped_dict.py
script-engine/potato_cactus/internal/worker/: __init__.py  simple_worker.py
scripts/builtin/commands/: animation_command.py  item_command.py  npc_command.py  object_command.py  position_command.py  set_varbit.py  teleport_command.py
scripts/builtin/default_handlers/interaction/: drop_item_handler.py  object_action_handler.py  pickup_item_handler.py
scripts/builtin/environment/: ladder.py  persistent_door.py
scripts/builtin/interaction/: drop_item_handler.py  pickup_item_handler.py
scripts/example/: hans.py
scripts/example/cooks_assistant/: chicken.py  cook.py  dairy_cow.py
scripts/example/windmill/: hopper.py  miller.py  wheat.py
tests/: Base37Test.hs  BinaryTest.hs  DecodeChatTests.hs  GetMonadTests.hs  IterableTests.hs  Main.hs  MobListTests.hs
tests/Game/: DynamicObjectCollectionTests.hs  GameObjectUpdateDiffTests.hs  GameObjectUpdateOperationsTests.hs  GroudItemCollectionTests.hs  GroundItemsUpdateDiffTests.hs  InterpolatePathTests.hs
tests/Game/ApplyActions/: RemoveGroundItemActionTests.hs
tests/Game/Combat/: AdvanceCombatEntityTests.hs  LocateCombatTargetTests.hs
tests/Game/Definitions/: StaticGameObjectSetTests.hs
tests/Game/Entity/Npc/: NpcMovementTests.hs
tests/Game/Movement/Pathing/: CollisionMapBuilderTests.hs  CollisionMapTests.hs  PathPlannerTests.hs  TileFlagsMapTests.hs
tests/Game/Objects/: HierarchicalObjectReconciliation.hs  TileObjectsTests.hs
tests/Game/Player/: AdvancePlayerTests.hs  CanInteractWithEntityTests.hs  ClosestInteractableTileCalcTests.hs  InteractionTests.hs  LocateInteractionTargetTests.hs  PlayerMovementTests.hs  VarpSetTests.hs
tests/Game/World/: SelectorsTests.hs
(+62 files in other folders)
