cabal-version:      2.4
name:               potato-cactus
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A 2005-era Runescape server engine.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license: GPLv3
author:             Kento Lauzon
maintainer:         kento.lauzon@ligature.ca

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable potato-cactus
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: PotatoCactus.Boot.GameThreadMain
                   PotatoCactus.Boot.GameChannel
                   PotatoCactus.Boot.ServerInit
                   PotatoCactus.Client.ClientUpdate
                   PotatoCactus.Client.LocalPlayerList
                   PotatoCactus.Client.PlayerInit
                   PotatoCactus.Network.Encoding.ChatMessageEncoding
                   PotatoCactus.Network.SocketHandler
                   PotatoCactus.Network.InboundPacketMapper
                   PotatoCactus.Network.Packets.In.ButtonClickPacket
                   PotatoCactus.Network.Packets.In.ChatMessagePacket
                   PotatoCactus.Network.Packets.In.EquipItemPacket
                   PotatoCactus.Network.Packets.In.ItemContainerClickPacket
                   PotatoCactus.Network.Packets.In.ObjectActionPacket
                   PotatoCactus.Network.Packets.In.PlayerWalkPacket
                   PotatoCactus.Network.Packets.Packet
                   PotatoCactus.Network.Packets.Reader
                   PotatoCactus.Network.Packets.Opcodes
                   PotatoCactus.Network.Packets.PacketLengths
                   PotatoCactus.Network.Packets.Out.AddObjectPacket
                   PotatoCactus.Network.Packets.Out.ChatboxMessagePacket
                   PotatoCactus.Network.Packets.Out.InitializePlayerPacket
                   PotatoCactus.Network.Packets.Out.LoadMapRegionPacket
                   PotatoCactus.Network.Packets.Out.UpdateFriendsListStatusPacket
                   PotatoCactus.Network.Packets.Out.UpdateItemContainerPacket
                   PotatoCactus.Network.Packets.Out.UpdateRunEnergyPacket
                   PotatoCactus.Network.Packets.Out.UpdateSkillPacket
                   PotatoCactus.Network.Packets.Out.PlayerInteractionPacket
                   PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeBlock
                   PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeAppearanceBlock
                   PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeChatUpdate
                   PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodePlayerMovement
                   PotatoCactus.Network.Packets.Out.PlayerUpdate.PlayerUpdatePacket
                   PotatoCactus.Network.Packets.Out.PlayerSettingsPackets
                   PotatoCactus.Network.Packets.Out.RemoveObjectPacket
                   PotatoCactus.Network.Packets.Out.TabInterfacePacket
                   PotatoCactus.Network.ClientHandler
                   PotatoCactus.Network.Binary
                   PotatoCactus.Login.LoginHandler
                   PotatoCactus.Login.Models
                   PotatoCactus.Game.Entity.Object.GameObject
                   PotatoCactus.Game.Definitions.EquipmentDefinitions
                   PotatoCactus.Game.Definitions.ItemDefinitions
                   PotatoCactus.Game.Interface.FriendsList
                   PotatoCactus.Game.Interface.GameTabs
                   PotatoCactus.Game.Interface.InterfaceButtonDispatch
                   PotatoCactus.Game.Interface.PlayerInteraction
                   PotatoCactus.Game.Interface.PlayerSettings
                   PotatoCactus.Game.ItemContainer
                   PotatoCactus.Game.Message.EquipItemMessagePayload
                   PotatoCactus.Game.Message.GameChannelMessage
                   PotatoCactus.Game.Message.ObjectClickPayload
                   PotatoCactus.Game.Message.RegisterClientPayload
                   PotatoCactus.Game.Movement.Direction
                   PotatoCactus.Game.Movement.InterpolatePath
                   PotatoCactus.Game.Movement.MovementEntity
                   PotatoCactus.Game.Movement.PlayerWalkMovement
                   PotatoCactus.Game.Movement.PositionXY
                   PotatoCactus.Game.Movement.StaticMovement
                   PotatoCactus.Game.Movement.WalkingStep
                   PotatoCactus.Game.Player
                   PotatoCactus.Game.PlayerUpdate.AdvancePlayer
                   PotatoCactus.Game.PlayerUpdate.Appearance
                   PotatoCactus.Game.PlayerUpdate.ChatMessage
                   PotatoCactus.Game.PlayerUpdate.Equipment
                   PotatoCactus.Game.PlayerUpdate.UpdateMask
                   PotatoCactus.Game.PlayerUpdate.PlayerUpdate
                   PotatoCactus.Game.PlayerUpdate.ProcessPlayerUpdate
                   PotatoCactus.Game.Position
                   PotatoCactus.Game.Skills
                   PotatoCactus.Game.Typing
                   PotatoCactus.Game.World
                   PotatoCactus.Game.World.MobList
                   PotatoCactus.Game.World.Selectors
                   PotatoCactus.Game.Reducer
                   PotatoCactus.Config.Constants
                   PotatoCactus.Persistence.PlayerRepository
                   PotatoCactus.Utils.Iterable
                   PotatoCactus.Utils.Logging

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time, containers
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -Werror
      -fwarn-incomplete-patterns
      -O3

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends: HUnit ^>=1.6, base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time, containers
    hs-source-dirs: tests, app
    default-language: Haskell2010