cabal-version:      2.4
name:               potato-cactus
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A 2005-era Runescape server engine.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: GPL-3.0-only
author:             Kento Lauzon
maintainer:         kento.lauzon@ligature.ca

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable potato-cactus
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: PotatoCactus.Boot.GameThreadMain
                   PotatoCactus.Boot.GameChannel
                   PotatoCactus.Boot.ServerInit
                   PotatoCactus.Boot.WorldInit
                   PotatoCactus.Client.ClientUpdate
                   PotatoCactus.Client.GameObjectUpdate.EncodeGameObjectUpdate
                   PotatoCactus.Client.GameObjectUpdate.GameObjectUpdateDiff
                   PotatoCactus.Client.GameObjectUpdate.GameObjectUpdateOperations
                   PotatoCactus.Client.GroundItemsUpdate.EncodeGroundItemsUpdate
                   PotatoCactus.Client.GroundItemsUpdate.GroundItemsUpdateDiff
                   PotatoCactus.Client.Interface.EncodeInterfaceUpdate
                   PotatoCactus.Client.LocalEntityList
                   PotatoCactus.Client.PlayerInit
                   PotatoCactus.Interop.ScriptEngineProcess
                   PotatoCactus.Network.Encoding.ChatMessageEncoding
                   PotatoCactus.Network.SocketHandler
                   PotatoCactus.Network.InboundPacketMapper
                   PotatoCactus.Network.Packets.In.ButtonClickPacket
                   PotatoCactus.Network.Packets.In.ChatMessagePacket
                   PotatoCactus.Network.Packets.In.ContinueDialoguePacket
                   PotatoCactus.Network.Packets.In.DropItemPacket
                   PotatoCactus.Network.Packets.In.EquipItemPacket
                   PotatoCactus.Network.Packets.In.ItemContainerClickPacket
                   PotatoCactus.Network.Packets.In.ItemOnObjectPacket
                   PotatoCactus.Network.Packets.In.NpcActionPacket
                   PotatoCactus.Network.Packets.In.NpcAttackPacket
                   PotatoCactus.Network.Packets.In.ObjectActionPacket
                   PotatoCactus.Network.Packets.In.PickupGroundItemPacket
                   PotatoCactus.Network.Packets.In.PlayerCommandPacket
                   PotatoCactus.Network.Packets.In.PlayerWalkPacket
                   PotatoCactus.Network.Packets.Packet
                   PotatoCactus.Network.Packets.Reader
                   PotatoCactus.Network.Packets.Opcodes
                   PotatoCactus.Network.Packets.PacketLengths
                   PotatoCactus.Network.Packets.Out.AddObjectPacket
                   PotatoCactus.Network.Packets.Out.AddGroundItemPacket
                   PotatoCactus.Network.Packets.Out.ChatboxInterfacePacket
                   PotatoCactus.Network.Packets.Out.ChatboxMessagePacket
                   PotatoCactus.Network.Packets.Out.ClearChunkObjectsPacket
                   PotatoCactus.Network.Packets.Out.CloseInterfacesPacket
                   PotatoCactus.Network.Packets.Out.InitializePlayerPacket
                   PotatoCactus.Network.Packets.Out.InterfaceAnimationPacket
                   PotatoCactus.Network.Packets.Out.InterfaceChatheadPacket
                   PotatoCactus.Network.Packets.Out.InterfacePacket
                   PotatoCactus.Network.Packets.Out.InterfaceTextPacket
                   PotatoCactus.Network.Packets.Out.LoadMapRegionPacket
                   PotatoCactus.Network.Packets.Out.UpdateFriendsListStatusPacket
                   PotatoCactus.Network.Packets.Out.UpdateItemContainerPacket
                   PotatoCactus.Network.Packets.Out.UpdateRunEnergyPacket
                   PotatoCactus.Network.Packets.Out.UpdateSkillPacket
                   PotatoCactus.Network.Packets.Out.NpcUpdate.NpcUpdatePacket
                   PotatoCactus.Network.Packets.Out.NpcUpdate.EncodeNpcAnimationBlock
                   PotatoCactus.Network.Packets.Out.NpcUpdate.EncodeNpcForcedChatBlock
                   PotatoCactus.Network.Packets.Out.NpcUpdate.EncodeNpcMovement
                   PotatoCactus.Network.Packets.Out.NpcUpdate.EncodePrimaryNpcHitUpdateBlock
                   PotatoCactus.Network.Packets.Out.NpcUpdate.EncodeSecondaryNpcHitUpdateBlock
                   PotatoCactus.Network.Packets.Out.PlayerInteractionPacket
                   PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeBlock
                   PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeAnimationBlock
                   PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeAppearanceBlock
                   PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodePrimaryHitUpdateBlock
                   PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeChatUpdate
                   PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodePlayerMovement
                   PotatoCactus.Network.Packets.Out.PlayerUpdate.PlayerUpdatePacket
                   PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeSecondaryHitUpdateBlock
                   PotatoCactus.Network.Packets.Out.PlayerSettingsPackets
                   PotatoCactus.Network.Packets.Out.RemoveGroundItemPacket
                   PotatoCactus.Network.Packets.Out.RemoveObjectPacket
                   PotatoCactus.Network.Packets.Out.SetPlacementReferencePacket
                   PotatoCactus.Network.Packets.Out.SetVarpPacket
                   PotatoCactus.Network.Packets.Out.TabInterfacePacket
                   PotatoCactus.Network.Packets.Out.WalkableInterfacePacket
                   PotatoCactus.Network.ClientHandler
                   PotatoCactus.Network.Binary
                   PotatoCactus.Login.LoginHandler
                   PotatoCactus.Login.Models
                   PotatoCactus.Game.Combat.AdvanceCombatEntity
                   PotatoCactus.Game.Combat.AdvanceCombatEntityDeps
                   PotatoCactus.Game.Combat.CombatEntity
                   PotatoCactus.Game.Combat.Hit
                   PotatoCactus.Game.Combat.LocateCombatTarget
                   PotatoCactus.Game.Entity.Animation.Animation
                   PotatoCactus.Game.Entity.EntityData
                   PotatoCactus.Game.Entity.GroundItem.GroundItem
                   PotatoCactus.Game.Entity.GroundItem.GroundItemCollection
                   PotatoCactus.Game.Entity.Interaction.AdvanceInteractionDeps
                   PotatoCactus.Game.Entity.Interaction.CanInteractWithEntity
                   PotatoCactus.Game.Entity.Interaction.ClosestInteractableTileCalc
                   PotatoCactus.Game.Entity.Interaction.Interaction
                   PotatoCactus.Game.Entity.Interaction.State
                   PotatoCactus.Game.Entity.Interaction.Target
                   PotatoCactus.Game.Entity.Npc.AdvanceNpc
                   PotatoCactus.Game.Entity.Npc.Npc
                   PotatoCactus.Game.Entity.Npc.NpcUpdateMask
                   PotatoCactus.Game.Entity.Npc.NpcMovement
                   PotatoCactus.Game.Entity.Npc.RespawnStrategy
                   PotatoCactus.Game.Entity.Object.DynamicObject
                   PotatoCactus.Game.Entity.Object.DynamicObjectCollection
                   PotatoCactus.Game.Entity.Object.GameObject
                   PotatoCactus.Game.Entity.Object.TileObjects
                   PotatoCactus.Game.Definitions.EquipmentDefinitions
                   PotatoCactus.Game.Definitions.GameObjectDefinitions
                   PotatoCactus.Game.Definitions.ItemDefinitions
                   PotatoCactus.Game.Definitions.NpcDefinitions
                   PotatoCactus.Game.Definitions.Parser.GameObjectPlacementParser
                   PotatoCactus.Game.Definitions.Parser.ItemDefinitionParser
                   PotatoCactus.Game.Definitions.Parser.ObjectDefinitionParser
                   PotatoCactus.Game.Definitions.StaticGameObjectSet
                   PotatoCactus.Game.Definitions.Types.GameObjectDefinition
                   PotatoCactus.Game.Definitions.Types.ItemDefinition
                   PotatoCactus.Game.Interface.FriendsList
                   PotatoCactus.Game.Interface.GameTabs
                   PotatoCactus.Game.Interface.InterfaceButtonDispatch
                   PotatoCactus.Game.Interface.InterfaceController
                   PotatoCactus.Game.Interface.PlayerInteraction
                   PotatoCactus.Game.Interface.PlayerSettings
                   PotatoCactus.Game.ItemContainer
                   PotatoCactus.Game.Message.EquipItemMessagePayload
                   PotatoCactus.Game.Message.GameChannelMessage
                   PotatoCactus.Game.Message.ItemOnObjectPayload
                   PotatoCactus.Game.Message.ObjectClickPayload
                   PotatoCactus.Game.Message.RegisterClientPayload
                   PotatoCactus.Game.Movement.Direction
                   PotatoCactus.Game.Movement.InterpolatePath
                   PotatoCactus.Game.Movement.PlayerMovement
                   PotatoCactus.Game.Movement.Pathing.CollisionMap
                   PotatoCactus.Game.Movement.Pathing.CollisionMapBuilder
                   PotatoCactus.Game.Movement.Pathing.MovementFlags
                   PotatoCactus.Game.Movement.Pathing.PathPlanner
                   PotatoCactus.Game.Movement.Pathing.TileFlagsMap
                   PotatoCactus.Game.Movement.PositionXY
                   PotatoCactus.Game.Movement.StaticMovement
                   PotatoCactus.Game.Movement.WalkingStep
                   PotatoCactus.Game.Player
                   PotatoCactus.Game.PlayerUpdate.AdvancePlayer
                   PotatoCactus.Game.PlayerUpdate.Appearance
                   PotatoCactus.Game.PlayerUpdate.ChatMessage
                   PotatoCactus.Game.PlayerUpdate.Equipment
                   PotatoCactus.Game.PlayerUpdate.UpdateMask
                   PotatoCactus.Game.PlayerUpdate.PlayerUpdate
                   PotatoCactus.Game.PlayerUpdate.PlayerAnimationDefinitions
                   PotatoCactus.Game.PlayerUpdate.ProcessPlayerUpdate
                   PotatoCactus.Game.PlayerUpdate.VarpSet
                   PotatoCactus.Game.Position
                   PotatoCactus.Game.Scripting.Actions.CreateInterface
                   PotatoCactus.Game.Scripting.Actions.ScriptInvocation
                   PotatoCactus.Game.Scripting.Actions.SpawnNpcRequest
                   PotatoCactus.Game.Scripting.Bridge.BridgeMessage
                   PotatoCactus.Game.Scripting.Bridge.Communication
                   PotatoCactus.Game.Scripting.Bridge.ControlMessages
                   PotatoCactus.Game.Scripting.Bridge.InitializeScriptEngineContext
                   PotatoCactus.Game.Scripting.Bridge.Serialization.ActionResultMapper
                   PotatoCactus.Game.Scripting.Bridge.Serialization.GameEventMapper
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.CombatDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.CombatTargetDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.CommandDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.DropItemDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.EntityDataDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.GameObjectDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.InteractionDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.ItemContainerDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.MovementDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.NpcAttackDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.NpcDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.NpcReferenceDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.PlayerAttackDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.PlayerDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.PositionDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.VarpsetDto
                   PotatoCactus.Game.Scripting.Bridge.Serialization.Models.WorldDto
                   PotatoCactus.Game.Scripting.BuiltinGameEventProcessor
                   PotatoCactus.Game.Scripting.Events.ApplyScriptActionResult
                   PotatoCactus.Game.Scripting.Events.CreateGameEvents
                   PotatoCactus.Game.Scripting.Events.NpcEvents
                   PotatoCactus.Game.Scripting.Events.PlayerEvents
                   PotatoCactus.Game.Scripting.ProcessTickUpdates
                   PotatoCactus.Game.Scripting.ScriptUpdates
                   PotatoCactus.Game.Skills
                   PotatoCactus.Game.Typing
                   PotatoCactus.Game.World
                   PotatoCactus.Game.World.CallbackScheduler
                   PotatoCactus.Game.World.MobList
                   PotatoCactus.Game.World.Selectors
                   PotatoCactus.Game.Reducer
                   PotatoCactus.Config.Constants
                   PotatoCactus.Persistence.PlayerRepository
                   PotatoCactus.Utils.Flow
                   PotatoCactus.Utils.Iterable
                   PotatoCactus.Utils.Logging

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time, containers, aeson, process, directory
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -Werror
      -fwarn-incomplete-patterns
      -O3
      -- -threaded
      -- -rtsopts

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends: HUnit ^>=1.6, base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time, containers, aeson, directory
    hs-source-dirs: tests, app
    default-language: Haskell2010